a2/stage/tests/accept/func_with_ctype.ul
int[65] main2() {
}

void main() {
  
}
