a2/stage/tests/reject/3.1.3_invalid.ul
void main() {
    print foo() + 1;

}

void foo() {

}